# SDL2-IoT-DASHBOARD

./: CMakeLists.txt  README.md
include/: Logger.h  Parser.h  SensorData.h  SensorSimulator.h
src/: DashboardUI.cpp  Logger.cpp  Parser.cpp  SensorSimulator.cpp  main.cpp
